      fieldname, breaking the depth limitation of INI.
    - Add CSV support.
    - Add support in DABSIC parser for functions, parameters, variables, loops, ifs,
      etc. Making it a real programming language. Support for hashmap and arrays.
      Reference are currently supported but *cannot be written*.
    - Extend PATH when using @insert and @include.
    - Add functions to manually extend or shrink path (push_path, pop_path).
    - Add DABSIC Sequence support.
    - Add LUA data structure support.
    - Add JSON support.
    - Add XML support.
    - Add LISP syntax support.

  * Edit network module
    - Rename t_bunny_error to t_bunny_network_error. **Compatibility break!**
    - Add BCT_ as prefix before t_bunny_comtype symbols. **Compatibility break!**
    - Add BCE_ as prefix before t_bunny_comerror symbols. **Compatibility break!**
    - Rename LAST_ERROR to LAST_NETWORK_ERROR. **Compatibility break!** as LAST_ERROR
      is now used by the error module.

  * Add unix module
    - bunny_popen and bunny_pclose allow complex bidirectionnal communication between
      two process.

  * Add monitor module
    - Bring a system in which register memory space to print or draw them later.

  * Add asynclock module
    - This module allow the user to register function call request for a specific
      time or pace.

  * Edit shader module
    - Bring automatically generated normal map shader with custom amount of lights.
    - Add the spreading color shader effect.
    - Add a default value configuration function for screen tweak shader.

  * Edit collision module
    - Bring dot-dot collision.
    - Bring rectangle-dot collision.
    - Bring quad-dot collision.
    - Bring rectangle-rectangle collision.
    - Bring triangle-dot collision.
    - Bring triangle-circle collision.
    - Bring circle-circle collision.
    - Bring circle-dot collision.
    - Bring equation-dot collision.
    - Bring equation-equation collision.
    - Bring quad-equation collision.