@@ -1,0 +1,6 @@
+<xml_root>
+  RawData1
+  <field value="val" />
+  RawData2
+</xml_root>
+
