@@ -13,6 +13,7 @@ int			main(int	argc,
   t_bunny_configuration	*a;
   int			i;
 
+  bunny_set_error_descriptor(2);
   for (i = 1; i < argc; ++i)
     {
       if ((a = bunny_open_configuration(argv[i], NULL)) == NULL)
